--- a/partials/about.html
+++ b/partials/about.html
@@ -1,51 +1,30 @@
 <div class="content">
-    <p>Este es un pequeño modelador basado en el trabajo del equipo <a target="_blank" href="https://jhipster.github.io/jdl">JDL syntax</a>.
-    <p>Try and edit the code on the left and watch the diagram change. Any changes are saved to the browser's <i>localStorage</i>, so your diagram should be here the next time, (but no guarantees).</p>
-    <p>Created by <a href="mailto:daniel.kallin@gmail.com">Deepu KS</a> and hosted on <a href="https://github.com/jhipster/jdl-studio" target="_blank">GitHub</a> with <i class="lnr lnr-heart"></i>.</p>
-    <p>JDL-Studio was made possible by the cool project <a target="_blank" href="https://github.com/skanaar/nomnoml">nomnoml</a> by <a target="_blank" href="https://github.com/skanaar">Daniel Kallin</a> and also
-    <a target="_blank" href="http://pegjs.org/">peg.js</a>,
-    <a target="_blank" href="https://github.com/cpettitt/dagre">dagre</a>,
-    <a target="_blank" href="http://lodash.com">lodash</a>,
-    <a target="_blank" href="https://linearicons.com/free">Linearicons</a>,
-    <a target="_blank" href="https://jquery.com/">JQuery</a>,
-    <a target="_blank" href="https://codemirror.net/">codemirror</a> and
-    <a target="_blank" href="http://ethanschoonover.com/solarized">solarized</a>.
-    </p>
-
+    <h2>Referencia Rápida</h2>
     <hr>
 
     <h2>Interaction</h2>
-
-    <p>The canvas can be panned and zoomed by dragging and scrolling in the right hand third of the canvas.
+    <p>El canvas puede ser desplazado, ampliado, arrastrado y desplazado.
     </p>
 
     <img class="invert" src="img/interaction-tutorial.png" alt="interaction tutorial">
 
-    <p>Downloaded image files will be given the filename in the <tt>#title</tt> directive.
+    <p>Los archivos de imagen descargados recibirán el nombre de archivo en la directiva <tt>#title</tt> directive.
     </p>
 
-    <p>The editor supports a subset of <i>Sublime Text's</i> <a href="https://codemirror.net/demo/sublime.html" target="_blank">keymappings</a>.
-        Hit <code>Ctrl-Space</code> for auto suggestions.
+    <p>El editor admite un conjunto de keymappings de <i>Sublime Text's</i> <a href="https://codemirror.net/demo/sublime.html" target="_blank">keymappings</a>.
+        Utilice <code>Ctrl-Space</code> para obtener auto sugerencias.
     </p>
 
     <hr>
 
-    <h2>Examples</h2>
-    <p>Refer <a target="_blank" href="https://jhipster.github.io/jdl">JDL</a> documentation for examples.</p>
+    <h2>Ejemplos</h2>
+    <p>Para ver ejemplos de la gramática empleada, dirijase a <a target="_blank" href="https://github.com/dads-software-brotherhood/kukulkan-grammar">kukulkan-grammar</a>.</p>
 
     <hr>
 
-    <h2>Usage</h2>
+    <h2>Uso</h2>
 
-    <p>Refer <a target="_blank" href="https://jhipster.github.io/jdl">JDL</a> documentation for more details.</p>
-
-    <label>Set font</label>
-    #font: Times
-
-    <label>Layout the diagram really tight</label>
-    #fontSize: 8<br>
-    #spacing: 12<br>
-    #padding: 3
+    <p>Refer <a target="_blank" href="https://github.com/dads-software-brotherhood/kukulkan-grammar">DSL</a> Uso de la gramática de kukulkan-grammar</p>
 
 </div>
 <div class="logo-background"></div>
