--- a/partials/reference.html
+++ b/partials/reference.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <h2>Entity Declaration</h2>
+    <h2>Declaración de Entidades</h2>
     <div class="highlighter-rouge">
         <pre class="highlight">
             <code>
@@ -11,19 +11,19 @@ entity &lt;entity name&gt; {
     </div>
     <ul class="options">
         <li>
-            <p><code class="highlighter-rouge">&lt;entity name&gt;</code> is the name of the entity,</p>
+            <p><code class="highlighter-rouge">&lt;entity name&gt;</code> es el nombre de la Entidad,</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">&lt;field name&gt;</code> the name of one field of the entity,</p>
+            <p><code class="highlighter-rouge">&lt;field name&gt;</code> el nombre de uno de las propiedades de una entidad,</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">&lt;type&gt;</code> the JHipster supported type of the field,</p>
+            <p><code class="highlighter-rouge">&lt;type&gt;</code> los tipos de datos soportados,</p>
         </li>
         <li>
-            <p>and as an option <code class="highlighter-rouge">&lt;validation&gt;</code> the validations for the field.</p>
+            <p>and as an option <code class="highlighter-rouge">&lt;validation&gt;</code> validaciones para las propiedades.</p>
         </li>
     </ul>
-    <h2>Enum Declaration</h2>
+    <h2>Declaración de Enumeraciones</h2>
     <div class="highlighter-rouge">
         <pre class="highlight">
             <code>
@@ -35,13 +35,13 @@ enum &lt;enum name&gt; {
     </div>
     <ul class="options">
         <li>
-            <p><code class="highlighter-rouge">&lt;enum name&gt;</code> is the name of the enum,</p>
+            <p><code class="highlighter-rouge">&lt;enum name&gt;</code> es el nombre de una enum,</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">&lt;enum values&gt;</code> the comma seperated values in uppercase</p>
+            <p><code class="highlighter-rouge">&lt;enum values&gt;</code> valores separados por coma en Mayúsculas</p>
         </li>
     </ul>
-    <h2>Relationship Declaration</h2>
+    <h2>Declaración de Relaciones</h2>
     <div class="highlighter-rouge">
         <pre class="highlight">
             <code>
@@ -55,67 +55,49 @@ to
     </div>
     <ul class="options">
         <li>
-            <p><code class="highlighter-rouge">&lt;type&gt;</code> is the type of your relationship (OneToMany | ManyToOne| OneToOne | ManyToMany)</p>
+            <p><code class="highlighter-rouge">&lt;type&gt;</code> es el tipo de una relación (OneToMany | ManyToOne| OneToOne | ManyToMany)</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">&lt;from entity&gt;</code> is the name of the entity owner of the relationship,</p>
+            <p><code class="highlighter-rouge">&lt;from entity&gt;</code> es el nombre de una entidad que posee una relación,</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">&lt;to entity&gt;</code> is the name of the entity where the relationship goes to,</p>
+            <p><code class="highlighter-rouge">&lt;to entity&gt;</code> es el nombre de una entidad hacia donde va la relación,</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">&lt;relationship name&gt;</code> is the name of the relationship in the entity.</p>
+            <p><code class="highlighter-rouge">&lt;relationship name&gt;</code> es el nombre de la relación en la entidad.</p>
         </li>
     </ul>
-    <p>The possible types and validations are those described <a href="https://jhipster.github.io/jdl/#annexes">here</a>, if the validation requires a value, simply add <code class="highlighter-rouge">(&lt;value&gt;)</code> right after the name of the validation.</p>
-    <h2>Option Declaration</h2>
-    <p>It is possible to declare some of the supported options via JDL, supported options are:</p>
+    <p>Los posibles tipos y validaciones están descritos aquí <a href="https://jhipster.github.io/jdl/#annexes">aquí</a>, si la validación requiere un valor, simplemente se agrega a la derecha<code class="highlighter-rouge">(&lt;value&gt;)</code> del nombre de la validación.</p>
+    <h2>Declaración de Opciones</h2>
+    <p>Es posible declarar algun de las opciones sopotadas a través del DSL, las opciones soportadas son:</p>
     <ul class="options">
         <li>
-            <p><code class="highlighter-rouge">paginate</code> enable pagination for the entity with pager | pagination | infinite-scroll</p>
+            <p><code class="highlighter-rouge">paginate</code> habilida la paginación en una entidad con pager | pagination | infinite-scroll</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">service</code> enable service layer for the entity with serviceClass | serviceImpl</p>
+            <p><code class="highlighter-rouge">service</code> habilita la capa de servicio para la entidad con serviceClass | serviceImpl</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">dto</code> enable DTO for the entity with Mapstruct</p>
+            <p><code class="highlighter-rouge">dto</code> habilita la generación de DTO para las entidades</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">skipClient</code> skip client side code for entity</p>
+            <p><code class="highlighter-rouge">skipClient</code> no genera front-end de la entidad</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">skipServer</code> skip server side code for entity</p>
+            <p><code class="highlighter-rouge">skipServer</code> no genera back-end para la entidad</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">angularSuffix</code> add a suffix to angular route names</p>
+            <p><code class="highlighter-rouge">angularSuffix</code> agrega un sufijo a los nombres de route en Angular</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">microservice</code> specify the app name of entity from another microservice</p>
+            <p><code class="highlighter-rouge">microservice</code> especifica el nombre de la aplicación de una entidad que se encuentra en otro microservicio.</p>
         </li>
         <li>
-            <p><code class="highlighter-rouge">search</code> specify search option for entity from another microservice</p>
+            <p><code class="highlighter-rouge">search</code> especificar las opciones de busqueda para una entidad que se encuentre en otro servicio</p>
         </li>
     </ul>
     <p>Refer <a target="_blank" href="https://jhipster.github.io/jdl/">JDL</a> documentation for more details.</p>
 
-    <h2>Directives</h2>
-    <p>The rendered image style can be customized by setting these directives along with the JDL code</p>
-    #arrowSize: 1<br>
-    #bendSize: 0.3<br>
-    #direction: down | right<br>
-    #gutter: 5<br>
-    #edgeMargin: 0<br>
-    #edges: hard | rounded<br>
-    #fill: #eee8d5; #fdf6e3<br>
-    #fillArrows: false<br>
-    #font: Calibri<br>
-    #fontSize: 12<br>
-    #leading: 1.25<br>
-    #lineWidth: 3<br>
-    #padding: 8<br>
-    #spacing: 40<br>
-    #stroke: #33322E<br>
-    #title: filename<br>
-    #zoom: 1<br>
+    
 </div>
 <div class="logo-background"></div>
